testsuite/tests/typecheck/should_compile/tc001.alan
hello () : proc
	foo : int;
{
	foo = 2147483648;  -- overflow
	foo = -2147483648; -- no overflow
}
