testsuite/tests/typecheck/should_fail/tcfail020.alan
MulDimArray() : proc
  i : int[4];
{
  i = i;
}
